lab2/seal.output
Terminals unused in grammar

    VAR


Grammar

    0 $accept: program $end

    1 program: declList

    2 declList: decl
    3         | declList decl

    4 decl: variableDecl
    5     | callDecl

    6 variableDecl: variable ';'

    7 variableDeclList: %empty
    8                 | variableDeclList variableDecl

    9 variable: TYPEID OBJECTID

   10 variables: variable
   11          | variables ',' variable

   12 variableList: %empty
   13             | variables

   14 callDecl: TYPEID FUNC OBJECTID '(' variableList ')' stmtBlock

   15 stmtBlock: '{' variableDeclList stmtList '}'

   16 stmt: ';'
   17     | expr ';'
   18     | ifStmt
   19     | whileStmt
   20     | forStmt
   21     | breakStmt
   22     | continueStmt
   23     | returnStmt
   24     | stmtBlock

   25 stmtList: %empty
   26         | stmtList stmt

   27 ifStmt: IF expr stmtBlock ELSE stmtBlock
   28       | IF expr stmtBlock

   29 whileStmt: WHILE expr stmtBlock

   30 forStmt: FOR exprOrNot ';' exprOrNot ';' exprOrNot stmtBlock

   31 returnStmt: RETURN exprOrNot ';'

   32 continueStmt: CONTINUE ';'

   33 breakStmt: BREAK ';'

   34 expr: OBJECTID '=' expr
   35     | CONST_INT
   36     | CONST_STRING
   37     | CONST_BOOL
   38     | CONST_FLOAT
   39     | OBJECTID
   40     | expr '+' expr
   41     | expr '-' expr
   42     | expr '*' expr
   43     | expr '/' expr
   44     | expr '%' expr
   45     | '-' expr
   46     | expr '<' expr
   47     | expr LE expr
   48     | expr EQUAL expr
   49     | expr NE expr
   50     | expr GE expr
   51     | expr '>' expr
   52     | expr AND expr
   53     | expr OR expr
   54     | '!' expr
   55     | '~' expr
   56     | expr '&' expr
   57     | expr '|' expr
   58     | expr '^' expr
   59     | call
   60     | '(' expr ')'

   61 exprOrNot: %empty
   62          | expr

   63 call: OBJECTID '(' actualList ')'

   64 actual: expr

   65 actuals: actual
   66        | actuals ',' actual

   67 actualList: %empty
   68           | actuals


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 54
    '%' (37) 44
    '&' (38) 56
    '(' (40) 14 60 63
    ')' (41) 14 60 63
    '*' (42) 42
    '+' (43) 40
    ',' (44) 11 66
    '-' (45) 41 45
    '/' (47) 43
    ';' (59) 6 16 17 30 31 32 33
    '<' (60) 46
    '=' (61) 34
    '>' (62) 51
    '^' (94) 58
    '{' (123) 15
    '|' (124) 57
    '}' (125) 15
    '~' (126) 55
    error (256)
    IF (258) 27 28
    ELSE (260) 27
    WHILE (261) 29
    FOR (262) 30
    BREAK (263) 33
    CONTINUE (264) 32
    FUNC (265) 14
    RETURN (266) 31
    CONST_BOOL <boolean> (267) 37
    CONST_INT <symbol> (268) 35
    CONST_STRING <symbol> (269) 36
    CONST_FLOAT <symbol> (270) 38
    VAR (271)
    AND (274) 52
    OR (275) 53
    EQUAL (276) 48
    NE (277) 49
    GE (278) 50
    LE (279) 47
    OBJECTID <symbol> (284) 9 14 34 39 63
    TYPEID <symbol> (285) 9 14
    UMINUS (287)


Nonterminals, with rules where they appear

    $accept (44)
        on left: 0
    program <program> (45)
        on left: 1
        on right: 0
    declList <decls> (46)
        on left: 2 3
        on right: 1 3
    decl <decl> (47)
        on left: 4 5
        on right: 2 3
    variableDecl <variableDecl> (48)
        on left: 6
        on right: 4 8
    variableDeclList <variableDecls> (49)
        on left: 7 8
        on right: 8 15
    variable <variable> (50)
        on left: 9
        on right: 6 10 11
    variables <variables> (51)
        on left: 10 11
        on right: 11 13
    variableList <variables> (52)
        on left: 12 13
        on right: 14
    callDecl <callDecl> (53)
        on left: 14
        on right: 5
    stmtBlock <stmtBlock> (54)
        on left: 15
        on right: 14 24 27 28 29 30
    stmt <stmt> (55)
        on left: 16 17 18 19 20 21 22 23 24
        on right: 26
    stmtList <stmts> (56)
        on left: 25 26
        on right: 15 26
    ifStmt <ifStmt> (57)
        on left: 27 28
        on right: 18
    whileStmt <whileStmt> (58)
        on left: 29
        on right: 19
    forStmt <forStmt> (59)
        on left: 30
        on right: 20
    returnStmt <returnStmt> (60)
        on left: 31
        on right: 23
    continueStmt <continueStmt> (61)
        on left: 32
        on right: 22
    breakStmt <breakStmt> (62)
        on left: 33
        on right: 21
    expr <expr> (63)
        on left: 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
        on right: 17 27 28 29 34 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 60 62 64
    exprOrNot <expr> (64)
        on left: 61 62
        on right: 30 31
    call <call> (65)
        on left: 63
        on right: 59
    actual <actual> (66)
        on left: 64
        on right: 65 66
    actuals <actuals> (67)
        on left: 65 66
        on right: 66 68
    actualList <actuals> (68)
        on left: 67 68
        on right: 63


State 0

    0 $accept: . program $end

    TYPEID  shift, and go to state 1

    program       go to state 2
    declList      go to state 3
    decl          go to state 4
    variableDecl  go to state 5
    variable      go to state 6
    callDecl      go to state 7


State 1

    9 variable: TYPEID . OBJECTID
   14 callDecl: TYPEID . FUNC OBJECTID '(' variableList ')' stmtBlock

    FUNC      shift, and go to state 8
    OBJECTID  shift, and go to state 9


State 2

    0 $accept: program . $end

    $end  shift, and go to state 10


State 3

    1 program: declList .
    3 declList: declList . decl

    TYPEID  shift, and go to state 1

    $default  reduce using rule 1 (program)

    decl          go to state 11
    variableDecl  go to state 5
    variable      go to state 6
    callDecl      go to state 7


State 4

    2 declList: decl .

    $default  reduce using rule 2 (declList)


State 5

    4 decl: variableDecl .

    $default  reduce using rule 4 (decl)


State 6

    6 variableDecl: variable . ';'

    ';'  shift, and go to state 12


State 7

    5 decl: callDecl .

    $default  reduce using rule 5 (decl)


State 8

   14 callDecl: TYPEID FUNC . OBJECTID '(' variableList ')' stmtBlock

    OBJECTID  shift, and go to state 13


State 9

    9 variable: TYPEID OBJECTID .

    $default  reduce using rule 9 (variable)


State 10

    0 $accept: program $end .

    $default  accept


State 11

    3 declList: declList decl .

    $default  reduce using rule 3 (declList)


State 12

    6 variableDecl: variable ';' .

    $default  reduce using rule 6 (variableDecl)


State 13

   14 callDecl: TYPEID FUNC OBJECTID . '(' variableList ')' stmtBlock

    '('  shift, and go to state 14


State 14

   14 callDecl: TYPEID FUNC OBJECTID '(' . variableList ')' stmtBlock

    TYPEID  shift, and go to state 15

    $default  reduce using rule 12 (variableList)

    variable      go to state 16
    variables     go to state 17
    variableList  go to state 18


State 15

    9 variable: TYPEID . OBJECTID

    OBJECTID  shift, and go to state 9


State 16

   10 variables: variable .

    $default  reduce using rule 10 (variables)


State 17

   11 variables: variables . ',' variable
   13 variableList: variables .

    ','  shift, and go to state 19

    $default  reduce using rule 13 (variableList)


State 18

   14 callDecl: TYPEID FUNC OBJECTID '(' variableList . ')' stmtBlock

    ')'  shift, and go to state 20


State 19

   11 variables: variables ',' . variable

    TYPEID  shift, and go to state 15

    variable  go to state 21


State 20

   14 callDecl: TYPEID FUNC OBJECTID '(' variableList ')' . stmtBlock

    '{'  shift, and go to state 22

    stmtBlock  go to state 23


State 21

   11 variables: variables ',' variable .

    $default  reduce using rule 11 (variables)


State 22

   15 stmtBlock: '{' . variableDeclList stmtList '}'

    $default  reduce using rule 7 (variableDeclList)

    variableDeclList  go to state 24


State 23

   14 callDecl: TYPEID FUNC OBJECTID '(' variableList ')' stmtBlock .

    $default  reduce using rule 14 (callDecl)


State 24

    8 variableDeclList: variableDeclList . variableDecl
   15 stmtBlock: '{' variableDeclList . stmtList '}'

    TYPEID  shift, and go to state 15

    $default  reduce using rule 25 (stmtList)

    variableDecl  go to state 25
    variable      go to state 6
    stmtList      go to state 26


State 25

    8 variableDeclList: variableDeclList variableDecl .

    $default  reduce using rule 8 (variableDeclList)


State 26

   15 stmtBlock: '{' variableDeclList stmtList . '}'
   26 stmtList: stmtList . stmt

    IF            shift, and go to state 27
    WHILE         shift, and go to state 28
    FOR           shift, and go to state 29
    BREAK         shift, and go to state 30
    CONTINUE      shift, and go to state 31
    RETURN        shift, and go to state 32
    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    ';'           shift, and go to state 41
    '('           shift, and go to state 42
    '{'           shift, and go to state 22
    '}'           shift, and go to state 43

    stmtBlock     go to state 44
    stmt          go to state 45
    ifStmt        go to state 46
    whileStmt     go to state 47
    forStmt       go to state 48
    returnStmt    go to state 49
    continueStmt  go to state 50
    breakStmt     go to state 51
    expr          go to state 52
    call          go to state 53


State 27

   27 ifStmt: IF . expr stmtBlock ELSE stmtBlock
   28       | IF . expr stmtBlock

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 54
    call  go to state 53


State 28

   29 whileStmt: WHILE . expr stmtBlock

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 55
    call  go to state 53


State 29

   30 forStmt: FOR . exprOrNot ';' exprOrNot ';' exprOrNot stmtBlock

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    $default  reduce using rule 61 (exprOrNot)

    expr       go to state 56
    exprOrNot  go to state 57
    call       go to state 53


State 30

   33 breakStmt: BREAK . ';'

    ';'  shift, and go to state 58


State 31

   32 continueStmt: CONTINUE . ';'

    ';'  shift, and go to state 59


State 32

   31 returnStmt: RETURN . exprOrNot ';'

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    $default  reduce using rule 61 (exprOrNot)

    expr       go to state 56
    exprOrNot  go to state 60
    call       go to state 53


State 33

   37 expr: CONST_BOOL .

    $default  reduce using rule 37 (expr)


State 34

   35 expr: CONST_INT .

    $default  reduce using rule 35 (expr)


State 35

   36 expr: CONST_STRING .

    $default  reduce using rule 36 (expr)


State 36

   38 expr: CONST_FLOAT .

    $default  reduce using rule 38 (expr)


State 37

   34 expr: OBJECTID . '=' expr
   39     | OBJECTID .
   63 call: OBJECTID . '(' actualList ')'

    '='  shift, and go to state 61
    '('  shift, and go to state 62

    $default  reduce using rule 39 (expr)


State 38

   45 expr: '-' . expr

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 63
    call  go to state 53


State 39

   54 expr: '!' . expr

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 64
    call  go to state 53


State 40

   55 expr: '~' . expr

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 65
    call  go to state 53


State 41

   16 stmt: ';' .

    $default  reduce using rule 16 (stmt)


State 42

   60 expr: '(' . expr ')'

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 66
    call  go to state 53


State 43

   15 stmtBlock: '{' variableDeclList stmtList '}' .

    $default  reduce using rule 15 (stmtBlock)


State 44

   24 stmt: stmtBlock .

    $default  reduce using rule 24 (stmt)


State 45

   26 stmtList: stmtList stmt .

    $default  reduce using rule 26 (stmtList)


State 46

   18 stmt: ifStmt .

    $default  reduce using rule 18 (stmt)


State 47

   19 stmt: whileStmt .

    $default  reduce using rule 19 (stmt)


State 48

   20 stmt: forStmt .

    $default  reduce using rule 20 (stmt)


State 49

   23 stmt: returnStmt .

    $default  reduce using rule 23 (stmt)


State 50

   22 stmt: continueStmt .

    $default  reduce using rule 22 (stmt)


State 51

   21 stmt: breakStmt .

    $default  reduce using rule 21 (stmt)


State 52

   17 stmt: expr . ';'
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . '%' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . EQUAL expr
   49     | expr . NE expr
   50     | expr . GE expr
   51     | expr . '>' expr
   52     | expr . AND expr
   53     | expr . OR expr
   56     | expr . '&' expr
   57     | expr . '|' expr
   58     | expr . '^' expr

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82
    ';'    shift, and go to state 83


State 53

   59 expr: call .

    $default  reduce using rule 59 (expr)


State 54

   27 ifStmt: IF expr . stmtBlock ELSE stmtBlock
   28       | IF expr . stmtBlock
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . '%' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . EQUAL expr
   49     | expr . NE expr
   50     | expr . GE expr
   51     | expr . '>' expr
   52     | expr . AND expr
   53     | expr . OR expr
   56     | expr . '&' expr
   57     | expr . '|' expr
   58     | expr . '^' expr

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82
    '{'    shift, and go to state 22

    stmtBlock  go to state 84


State 55

   29 whileStmt: WHILE expr . stmtBlock
   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . '%' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . EQUAL expr
   49     | expr . NE expr
   50     | expr . GE expr
   51     | expr . '>' expr
   52     | expr . AND expr
   53     | expr . OR expr
   56     | expr . '&' expr
   57     | expr . '|' expr
   58     | expr . '^' expr

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82
    '{'    shift, and go to state 22

    stmtBlock  go to state 85


State 56

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . '%' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . EQUAL expr
   49     | expr . NE expr
   50     | expr . GE expr
   51     | expr . '>' expr
   52     | expr . AND expr
   53     | expr . OR expr
   56     | expr . '&' expr
   57     | expr . '|' expr
   58     | expr . '^' expr
   62 exprOrNot: expr .

    AND    shift, and go to state 67
    OR     shift, and go to state 68
    EQUAL  shift, and go to state 69
    NE     shift, and go to state 70
    GE     shift, and go to state 71
    LE     shift, and go to state 72
    '<'    shift, and go to state 73
    '>'    shift, and go to state 74
    '+'    shift, and go to state 75
    '-'    shift, and go to state 76
    '*'    shift, and go to state 77
    '/'    shift, and go to state 78
    '%'    shift, and go to state 79
    '&'    shift, and go to state 80
    '|'    shift, and go to state 81
    '^'    shift, and go to state 82

    $default  reduce using rule 62 (exprOrNot)


State 57

   30 forStmt: FOR exprOrNot . ';' exprOrNot ';' exprOrNot stmtBlock

    ';'  shift, and go to state 86


State 58

   33 breakStmt: BREAK ';' .

    $default  reduce using rule 33 (breakStmt)


State 59

   32 continueStmt: CONTINUE ';' .

    $default  reduce using rule 32 (continueStmt)


State 60

   31 returnStmt: RETURN exprOrNot . ';'

    ';'  shift, and go to state 87


State 61

   34 expr: OBJECTID '=' . expr

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    expr  go to state 88
    call  go to state 53


State 62

   63 call: OBJECTID '(' . actualList ')'

    CONST_BOOL    shift, and go to state 33
    CONST_INT     shift, and go to state 34
    CONST_STRING  shift, and go to state 35
    CONST_FLOAT   shift, and go to state 36
    OBJECTID      shift, and go to state 37
    '-'           shift, and go to state 38
    '!'           shift, and go to state 39
    '~'           shift, and go to state 40
    '('           shift, and go to state 42

    $default  reduce using rule 67 (actualList)

    expr        go to state 89
    call        go to state 53
    actual      go to state 90
    actuals     go to state 91
    actualList  go to state 92


State 63

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . '%' expr
   45     | '-' expr .
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . EQUAL expr
   49     | expr . NE expr
   50     | expr . GE expr
   51     | expr . '>' expr
   52     | expr . AND expr
   53     | expr . OR expr
   56     | expr . '&' expr
   57     | expr . '|' expr
   58     | expr . '^' expr

    '&'  shift, and go to state 80
    '|'  shift, and go to state 81
    '^'  shift, and go to state 82

    $default  reduce using rule 45 (expr)


State 64

   40 expr: expr . '+' expr
   41     | expr . '-' expr
   42     | expr . '*' expr
   43     | expr . '/' expr
   44     | expr . '%' expr
   46     | expr . '<' expr
   47     | expr . LE expr
   48     | expr . EQUAL expr
   49     | expr . NE expr
   50     | expr . GE expr
   51     | expr . '>' expr
   52     | expr . AND expr
   53     | expr . OR expr
   54     | '!' expr .
   56     | expr . '&' expr
   57     | expr . '|' expr
   58     | expr . '^' expr

    '&'  shift, and go to state 80
    '|'  shift, and go to state 81
    '^'  shift, and go to state 82

    $default  reduce using rule 54 (expr)


State 65
